--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Article Notes</title>
     <link rel="stylesheet" href="project/assets/css/style.css" />
     <script src="project/assets/js/dataService.js"></script>
+    <script src="project/assets/js/toast.js"></script>
     <style>
       :root {
         --radius: 12px;
@@ -313,10 +314,13 @@
         }
 
         async function loadAll() {
+          const tid = (window.Toast && Toast.loading) ? Toast.loading('Caricamento dati...') : null;
           try {
             db = await DataService.getAll();
+            if (tid && Toast.update) { Toast.update(tid, 'Dati caricati', 'success'); setTimeout(()=>Toast.dismiss(tid), 800); }
           } catch (e) {
             console.warn('[index] Impossibile caricare dal GAS:', e);
+            if (window.Toast && Toast.error) Toast.error('Errore nel caricamento dati');
             db = {};
           }
           computeFacets();
