--- a/notes-popup.html
+++ b/notes-popup.html
@@ -53,6 +53,10 @@
           </datalist>
         </div>
         <div>
+          <label for="importanceInput">Importanza (1–10)</label>
+          <input id="importanceInput" type="number" min="1" max="10" step="1" value="1" />
+        </div>
+        <div>
           <label for="tagsInput">Tag (separati da virgola)</label>
           <input id="tagsInput" type="text" placeholder="es. energy, ecology, hydropower" />
         </div>
@@ -96,6 +100,7 @@
         const imageUrlInput = document.getElementById('imageUrlInput');
         const animalsInput = document.getElementById('animalsInput');
         const commentInput = document.getElementById('commentInput');
+        const importanceInput = document.getElementById('importanceInput');
 
         let currentDOI = null;
         let db = {};
@@ -134,6 +139,7 @@
           imageUrlInput.value = (note && note.imageUrl) || '';
           commentInput.value = (note && note.comment) || '';
           animalsInput.value = Array.isArray(note && note.animals) ? (note.animals || []).join(', ') : ((note && note.animals) || '');
+          importanceInput.value = (note && note.importanza != null) ? note.importanza : 1;
         }
 
         function populateSelect() {
@@ -229,6 +235,7 @@
             imageUrl: (imageUrlInput.value || '').trim() || null,
             comment: (commentInput.value || '').trim() || null,
             animals: splitCsv(animalsInput.value),
+            importanza: Math.max(1, Math.min(10, parseInt(importanceInput.value || '1', 10)))
           };
           try {
             if (window.parent && window.parent !== window) {
