--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         /* Libreria */
         --book-shadow: rgba(0,0,0,.15);
         --shelf-wood-1: #d8c0a8;
-        --shelf-wood-2: #c1a186);
+        --shelf-wood-2: #c1a186;
       }
 
       body {
